fixed too big with-preset of tagsinput-textfields for adding hosts/properties

--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ p.propertyTitle {
     display: inline-block;
 }
 
+.tt-input {
+  display: inline-block;
+}
+
 #host-selection > div.bootstrap-tagsinput, #property-selection > div.bootstrap-tagsinput {
   width: 100%;
 }
